@@ -1,5 +1,8 @@
 TheKabal (19 May 2013)
 --------------------------------------
+Fix BntSchema so that it returns an array only (no direct output)
+Fix Create universe output function table_row & table_row_xml to correctly show the full error message on rows with errors (table title row was incorrectly using double quotes which broke html)
+Begin converting Create Universe to use translated text.
 Fix BntFile so that in Create Universe on step 5, it imports the registry correctly. The DB is set to active (but empty) at that point.
 
 TheKabal (18 May 2013)
